Prevent line break in tabs

--- a/react/src/styles/App.module.scss
+++ b/react/src/styles/App.module.scss
@@ -362,6 +362,7 @@ table {
     & > button {
         text-align: center;
         background-color: $color-tab-background-dark;
+        white-space: nowrap;
         &.tabs__elem--active {
             cursor: initial;
             background-color: $color-tab-background;
